@@ -8,6 +8,8 @@
                  [org.clojure/clojurescript "1.9.946"]
                  [reagent "0.7.0"]]
 
+  :jvm-opts ["--add-modules" "java.xml.bind"]
+
   :plugins [[lein-cljsbuild "1.1.5"]
             [lein-figwheel "0.5.14"]]
 
